--- a/ankommande.html
+++ b/ankommande.html
@@ -31,7 +31,7 @@
                     <section id="info1">
                     <label for="UNO">Namn eller UNO-kod:</label>
                     <input type="text" id="UNO" name="UNO">
-                    <label for="fname">Datum</label>
+                    <label for="fname">Datum:</label>
                     <input type="text" id="fname" name="fname">
                     <button>Ok</button>
                 </section>
