--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -26,17 +26,19 @@
             <article>
                 <form>
                     <section id="info1">
-                    <label for="UNO">UNO-kod:</label>
-                    <input type="text" id="UNO" name="UNO">
-                    <label for="fname">Förnamn:</label>
-                    <input type="text" id="fname" name="fname">
-                    <label for="lname">Efternamn:</label>
-                    <input type="text" id="lname" name="lname">
+                    <label for="UNO">UNO-kod *</label>
+                    <input type="text" id="UNO" name="UNO"
+                           required minlength="2" maxlength="8"/>
+                    <label for="fname">Förnamn *</label>
+                    <input type="text" id="fname" name="fname"
+                           required minlength="2" maxlength="8"/>
+                    <label for="lname">Efternamn *</label>
+                    <input type="text" id="lname" name="lname"
+                           required minlength="2" maxlength="8"/>
                     <label for="birthyear">Födelseår(barn):</label>
                     <input type="text" id="birthyear" name="birthyear">
                 </section>
                 <section id="info2">
-
                     <label for="language">Språk:</label>
                     <input type="text" id="language" name="language">
                     <label for="land">Land:</label>
