Added some error handling to HTML

--- a/ankommande.html
+++ b/ankommande.html
@@ -29,10 +29,10 @@
             <article>
                 <form>
                     <section id="info1">
-                    <label for="UNO">Namn eller UNO-kod:</label>
+                    <label for="UNO">Namn eller UNO-kod</label>
                     <input type="text" id="UNO" name="UNO">
-                    <label for="fname">Datum:</label>
-                    <input type="text" id="fname" name="fname">
+                    <label for="fname">Datum</label>
+                    <input type="date" id="fname" name="fname">
                     <button>Ok</button>
                 </section>
                 </form>
