--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -35,13 +35,13 @@
                     <label for="lname">Efternamn *</label>
                     <input type="text" id="lname" name="lname"
                            required minlength="2" maxlength="8"/>
-                    <label for="birthyear">Födelseår(barn):</label>
+                    <label for="birthyear">Födelseår(barn)</label>
                     <input type="text" id="birthyear" name="birthyear">
                 </section>
                 <section id="info2">
-                    <label for="language">Språk:</label>
+                    <label for="language">Språk</label>
                     <input type="text" id="language" name="language">
-                    <label for="land">Land:</label>
+                    <label for="land">Land</label>
                     <input type="text" id="land" name="land">
                 <section id="register">
                     <button>Registrera deltagare</button>
