--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -28,14 +28,14 @@
         </nav>
         <section id="folder">
             <article>
-                    <label for="enhet-name">Enhetens benämning på händelsen:</label>
+                    <label for="enhet-name">Typ av Aktivitet</label>
                         <select id="aktivitet" name="aktivitet" form="aktivitetform" th:ccId="${costCenterId}">
                             <option th:each="alias: ${aliases}" th:value="${alias.activity.id}" th:text="${alias.id.definition}"></option>
                         </select>
-                    <label for="antal">Antal deltagare:</label>
+                    <label for="antal">Antal deltagare</label>
                     <input type="number" id="antal" name="antal"
                            required min="1" max="50"/>
-                    <label for="namnge">Namnge deltagare:</label>
+                    <label for="namnge">Namnge deltagare</label>
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider round"></span>
