--- a/ankommande.html
+++ b/ankommande.html
@@ -31,9 +31,9 @@
                     <section id="info1">
                     <label for="UNO">Namn eller UNO-kod</label>
                     <input type="text" id="UNO" name="UNO">
-                    <label for="fname">Datum</label>
-                    <input type="date" id="fname" name="fname">
-                    <button>Ok</button>
+                    <label for="date">Datum</label>
+                    <input type="date" id="date" name="date">
+                    <button onclick="postArrival()">Ok</button>
                 </section>
                 </form>
             </article>
