--- a/ankommande.html
+++ b/ankommande.html
@@ -8,6 +8,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="/script.js" defer></script>
+        <script src="/static/ajax.js" defer></script>
     </head>
     <body>
 
