Fixade datum i html + ignorea lite intellij filer.

--- a/ankommande.html
+++ b/ankommande.html
@@ -41,6 +41,13 @@
                 </form>
             </article>
         </section>
-
+        <script>
+            Date.prototype.yyyymmdd = function() {
+            let mm = this.getMonth() + 1; // getMonth() is zero-based
+            let dd = this.getDate();
+            return [this.getFullYear(), (mm>9 ? '' : '0') + mm, (dd>9 ? '' : '0') + dd].join('-');};
+            let now = new Date();
+            document.getElementById("fname").value = now.yyyymmdd();
+        </script>
     </body>
 </html>
