Stuff for registering participants

--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -8,6 +8,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="/script.js" defer></script>
+        <script src="/static/ajax.js" defer></script>
     </head>
     <body>
         <div id="menu">
@@ -44,7 +47,7 @@
                     <label for="land">Land</label>
                     <input type="text" id="land" name="land">
                 <section id="register">
-                    <button>Registrera deltagare</button>
+                    <button onclick="postNewParticipant()">Registrera deltagare</button>
                 </section>
                 </section>
                 </form>
