Dagens datum som default i input.

--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -48,5 +48,13 @@
                     <button onclick="postActivity()">Registrera händelse</button>
             </article>
         </section>
+        <script>
+            Date.prototype.yyyymmdd = function() {
+            let mm = this.getMonth() + 1; // getMonth() is zero-based
+            let dd = this.getDate();
+            return [this.getFullYear(), (mm>9 ? '' : '0') + mm, (dd>9 ? '' : '0') + dd].join('-');};
+            let now = new Date();
+            document.getElementById("occurrence_date").value = now.yyyymmdd();
+        </script>
     </body>
 </html>
