--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -61,6 +61,14 @@
                             fname.setCustomValidity(""); }
                         });
                 </script>
+                <script>
+                    Date.prototype.yyyymmdd = function() {
+                    let mm = this.getMonth() + 1; // getMonth() is zero-based
+                    let dd = this.getDate();
+                    return [this.getFullYear(), (mm>9 ? '' : '0') + mm, (dd>9 ? '' : '0') + dd].join('-');};
+                    let now = new Date();
+                    document.getElementById("birthyear").value = now.yyyymmdd();
+                </script>
             </article>
         </section>
     </body>
