--- a/ankommande.html
+++ b/ankommande.html
@@ -36,7 +36,7 @@
                     <input type="text" id="UNO" name="UNO">
                     <label for="date">Datum</label>
                     <input type="date" id="date" name="date">
-                    <button onclick="postArrival()">Ok</button>
+                    <button onclick="postArrival()">Registrera ankommande</button>
                 </section>
                 </form>
             </article>
