--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script src="/script.js" defer></script>
         <script src="/static/ajax.js" defer></script>
