Minor formatting, added required type for arrival page

--- a/ankommande.html
+++ b/ankommande.html
@@ -33,10 +33,10 @@
             <article>
                 <form>
                     <section id="info1">
-                    <label for="UNO">Namn eller UNO-kod</label>
-                    <input type="text" id="UNO" name="UNO">
+                    <label for="UNO">Sök (Namn eller UNO-Kod)</label>
+                    <input type="text" id="UNO" name="UNO" required>
                     <label for="date">Datum</label>
-                    <input type="date" id="date" name="date">
+                    <input type="date" id="date" name="date" required>
                     <button onclick="postArrival()">Registrera ankommande</button>
                 </section>
                 </form>
