--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -29,21 +29,25 @@
         </nav>
         <section id="folder">
             <article>
-                    <label for="enhet-name">Typ av Aktivitet</label>
+                    <label for="enhet-name">Typ av Aktivitet*</label>
                         <select id="aktivitet" name="aktivitet" form="aktivitetform" th:ccId="${costCenterId}">
                             <option th:each="alias: ${aliases}" th:value="${alias.activity.internalId}" th:text="${alias.id.definition}"></option>
                         </select>
-                    <label for="antal">Volym</label>
+                    <label for="antal">Volym*</label>
                     <input type="number" id="antal" name="antal"
-                           required min="1" max="50"/>
+                           required min="1" max="50" placeholder=""
+                           oninvalid="this.setCustomValidity('Ange Volym (1-50)')"
+                           oninput="this.setCustomValidity('')"/>
                     <label for="namnge">Namnge deltagare</label>
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider round"></span>
                     </label>
                     <label>
-                        Datum
-                        <input type="date" id="occurrence_date" value="">
+                        Datum*
+                        <input type="date" id="occurrence_date" value="" required placeholder=""
+                               oninvalid="this.setCustomValidity('Ange Datum')"
+                               oninput="this.setCustomValidity('')"/>
                     </label>
                     <button onclick="postActivity()">Registrera händelse</button>
             </article>
