Ajax GET funktion till följa upp sidan

--- a/foljaupp.html
+++ b/foljaupp.html
@@ -23,7 +23,10 @@
 
 
         <section id="historik-bakgrund">
-            <p>Date: <input type="text" id="datepicker"></p>
+            <p>Datum: <input type="text" id="datepicker"></p>
+            <div id="historik">
+                <p1>Senaste</p1>
+            </div>
         </section>
         <script src="/script.js" defer></script>
     </body>
