--- a/foljaupp.html
+++ b/foljaupp.html
@@ -24,6 +24,9 @@
 
         <section id="historik-bakgrund">
             <p>Datum: <input type="text" id="datepicker"></p>
+            <div id="calender">
+                <button type="button" onclick="getActivity()">Ok</button>
+                </div>
             <div id="historik">
                 <p1>Senaste</p1>
             </div>
