--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <section id="jumbo">
                 <article>
                     <h2 class="title">Välj din enhet</h2>
-                    <select id="selector" name="vald_enhet" form="enhetsform">
+                    <select aria-label="selector" id="selector" name="vald_enhet" form="enhetsform" required>
                         <option th:each="costCenter: ${costCenters}" th:value="${costCenter.id}" th:text="${costCenter.name}"></option>
                     </select>
                     <button type="submit">OK</button>
