--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -17,7 +17,7 @@
         <div id="menu">
             <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
             <h1>DIGGINS</h1>
-            <span id="chosen" th:text="${costCenterName}">Kvarnbytorp</span>
+            <span id="chosen" th:text="${costCenterName}"></span>
             <a th:href="'/foljaupp/'+${costCenterId}"><section class="button-blue">Dagsrapporter</section></a>
         </div>
         <nav>
