--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -17,7 +17,7 @@
         <div id="menu">
             <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
             <h1>DIGGINS</h1>
-            <span id="chosen" th:text="${costCenterName}"></span>
+            <span class="grey" id="chosen" th:text="${costCenterName}"></span>
             <a th:href="'/foljaupp/'+${costCenterId}"><section class="button-blue">Dagsrapporter</section></a>
         </div>
         <nav>
@@ -25,29 +25,33 @@
             <h2 class="button-blue"><a th:href="'/reg-deltagare/'+${costCenterId}">Ny Deltagare</a></h2>
             <h2 class="button-blue active"><a th:href="'/reg-handelse/'+${costCenterId}">Aktivitet</a></h2>
         </nav>
-        <section id="folder">
+        <section class="folder">
             <article>
-                    <label for="enhet-name">Typ av Aktivitet*</label>
-                        <select id="aktivitet" name="aktivitet" form="aktivitetform" th:ccId="${costCenterId}">
+                <form class="grid double-column grid-column-05fr">
+                    <section class="grid single-column">
+                        <label for="aktivitet">Typ av Aktivitet*</label>
+                        <select id="aktivitet" name="aktivitet"th:ccId="${costCenterId}">
                             <option th:each="alias: ${aliases}" th:value="${alias.activity.internalId}" th:text="${alias.id.definition}"></option>
                         </select>
-                    <label for="antal">Volym*</label>
-                    <input type="number" id="antal" name="antal"
-                           required min="1" max="50" placeholder=""
-                           oninvalid="this.setCustomValidity('Ange Volym (1-50)')"
-                           oninput="this.setCustomValidity('')"/>
-                    <label for="namnge">Namnge deltagare</label>
-                    <label class="switch">
-                        <input type="checkbox">
-                        <span class="slider round"></span>
-                    </label>
-                    <label>
-                        Datum*
-                        <input type="date" id="occurrence_date" value="" required placeholder=""
-                               oninvalid="this.setCustomValidity('Ange Datum')"
-                               oninput="this.setCustomValidity('')"/>
-                    </label>
-                    <button onclick="postActivity()">Registrera händelse</button>
+                        <label for="antal">Volym*</label>
+                        <input type="number" id="antal" name="antal" required min="1" max="50" placeholder="" oninvalid="this.setCustomValidity('Ange Volym (1-50)')" oninput="this.setCustomValidity('')"/>
+                        <label class="switch">Namnge deltagare
+                            <input type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+                        <label for="occurrence_date">Datum*</label>
+                        <input type="date" id="occurrence_date" value="" required placeholder="" oninvalid="this.setCustomValidity('Ange Datum')" oninput="this.setCustomValidity('')"/>
+                    </section>
+                    <section class="grid double-column">
+                        <span>Personer</span>
+                        <span>Valda</span>
+                        <span class="container grey" id="buttoncontainer"></span>
+                        <span class="container grey" id="chosencontainer"></span>
+                    </section>
+                    <section>
+                        <button class="button-orange" onclick="postActivity()">Registrera händelse</button>
+                    </section>
+                </form>
             </article>
         </section>
         <script>
