--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+        <script src="/static/script.js" defer></script>
         <script src="/static/ajax.js" defer></script>
         <title>Stockholms Stadsmission: DIGGINS Rapporteringsverktyg</title>
     </head>
