--- a/ankommande.html
+++ b/ankommande.html
@@ -10,14 +10,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script src="/static/script.js" defer></script>
+        <script src="/static/participants.js" defer></script>
         <script src="/static/ajax.js" defer></script>
     </head>
     <body>
         <div id="menu">
             <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
             <h1>DIGGINS</h1>
-            <span class="grey" id="chosen" th:text="${costCenterName}"></span>
+            <span class="grey" id="chosen" th:text="${costCenterName}" th:ccId="${costCenterId}"></span>
             <a th:href="'/foljaupp/'+${costCenterId}"><section class="button-blue">Dagsrapporter</section></a>
         </div>
 
@@ -29,17 +29,17 @@
 
         <section class="folder">
             <article>
-                <form class="grid double-column grid-column-05fr">
+                <form class="grid double-column grid-column-05fr" onsubmit="return false;">
                     <section class="grid single-column align-start">
 <!--                    <input type="text" id="UNO" name="UNO" required placeholder="" oninvalid="this.setCustomValidity('Ange Ankommande Person')" oninput="this.setCustomValidity('')"/>-->
                         <label for="date">Datum</label>
-                        <input type="date" id="date" name="date" required placeholder="" oninvalid="this.setCustomValidity('Ange Datum')" oninput="this.setCustomValidity('')"/>
+                        <input type="date" id="date" name="date" required pattern="^\d{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$" oninvalid="this.setCustomValidity('Ange Datum')" oninput="this.setCustomValidity('')"/>
                         <button class="button-orange" onclick="postArrival()">Registrera ankommande</button>
                     </section>
                     <section class="grid single-column">
                         <label for="search">Sök (Namn eller UNO-Kod)</label>
                         <span class="container">
-                            <input class="flex-grow" type="text" placeholder="Sök för att filtrera..." id="search" required>
+                            <input class="flex-grow" type="text" placeholder="Sök för att filtrera..." id="search">
                             <span class="button-orange button-delete" id="deletebutton"></span>
                         </span>
                         <div class="grid double-column">
@@ -58,7 +58,7 @@
             let dd = this.getDate();
             return [this.getFullYear(), (mm>9 ? '' : '0') + mm, (dd>9 ? '' : '0') + dd].join('-');};
             let now = new Date();
-            document.getElementById("fname").value = now.yyyymmdd();
+            document.getElementById("date").value = now.yyyymmdd();
         </script>
     </body>
 </html>
