--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script src="/static/script.js" defer></script>
+        <script src="/static/participants.js" defer></script>
         <script src="/static/ajax.js" defer></script>
         <title>Stockholms Stadsmission: DIGGINS Rapporteringsverktyg</title>
     </head>
@@ -18,7 +18,7 @@
         <div id="menu">
             <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
             <h1>DIGGINS</h1>
-            <span class="grey" id="chosen" th:text="${costCenterName}"></span>
+            <span class="grey" id="chosen" th:text="${costCenterName}" th:ccId="${costCenterId}"></span>
             <a th:href="'/foljaupp/'+${costCenterId}"><section class="button-blue">Dagsrapporter</section></a>
         </div>
         <nav>
@@ -31,7 +31,7 @@
                 <form class="grid double-column grid-column-05fr">
                     <section class="grid single-column">
                         <label for="aktivitet">Typ av Aktivitet*</label>
-                        <select id="aktivitet" name="aktivitet"th:ccId="${costCenterId}">
+                        <select id="aktivitet" name="aktivitet">
                             <option th:each="alias: ${aliases}" th:value="${alias.activity.internalId}" th:text="${alias.id.definition}"></option>
                         </select>
                         <label for="antal">Volym*</label>
