--- a/reg-deltagare.html
+++ b/reg-deltagare.html
@@ -41,6 +41,7 @@
                         <input id="birthyear" type="date" name="birthyear">
                         <label for="language">Land</label>
                         <select id="country" name="country">
+                            <option>Välj land</option>
                             <option value="Afganistan">Afghanistan</option>
                             <option value="Albania">Albania</option>
                             <option value="Algeria">Algeria</option>
@@ -290,7 +291,7 @@
                          </select>
                         <label for="languages">Språk</label>
                         <select id="languages" name="languages">
-                            <option>Select Language</option>
+                            <option>Välj språk</option>
                             <option value="af">Afrikaans</option>
                             <option value="sq">Albanian - shqip</option>
                             <option value="am">Amharic - አማርኛ</option>
