--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -28,7 +28,7 @@
         </nav>
         <section class="folder">
             <article>
-                <form class="grid double-column grid-column-05fr">
+                <form class="grid double-column grid-column-05fr" onsubmit="return false">
                     <section class="grid single-column">
                         <label for="aktivitet">Typ av Aktivitet*</label>
                         <select id="aktivitet" name="aktivitet">
@@ -39,11 +39,11 @@
                         <label for="occurrence_date">Datum*</label>
                         <input type="date" id="occurrence_date" value="" required placeholder="" oninvalid="this.setCustomValidity('Ange Datum')" oninput="this.setCustomValidity('')"/>
                         <label class="switch">Namnge deltagare
-                            <input type="checkbox">
+                            <input type="checkbox" onchange="showOrHideParticipants(this)">
                             <span class="slider round"></span>
                         </label>
                     </section>
-                    <section class="grid double-column">
+                    <section class="grid double-column blur" id="personer">
                         <span>Personer</span>
                         <span>Valda</span>
                         <span class="container grey" id="buttoncontainer"></span>
